# scp

./: .gitignore  .mcp.json  CLAUDE.md  CONCEPT.md  DISCOVERIES.md  EM_THEORY.md  FUTURE.md  README.md  STOCHASTIC_APPLICATIONS.md  brannen_phase_alpha.py  compare.md  go.mod  go.sum  idea.md  proposal_freq.md  readme.md
.claude/: settings.local.json
grok02/: 02.py
grok03/: CMakeLists.txt  c.sh
grok04/: 04.go
grok05/: viz.py
grok06/: sim.py  viz2d.py  viz3d.py
grok07/: main.go
lean/: Polariton.lean  ScpLib.lean  SinglePass.lean  StabilityCondition.lean  V44.lean  V50C3.lean  V50C4.lean  V52.lean  VecStream.lean  lake-manifest.json  lakefile.lean
sfa/: MULTI_RESOLUTION.md  Makefile  README.md
simwasm/: build.sh  index.html  simulation.go
speculative/: OCTO_SPECTRAL_PROJECTION_MENTAL_MODEL.md
v1/: chat-Chiral Harmonic Particle Theory.txt  gemini_2025-08-12_a.tex  gemini_2025-08-12_b.tex  gemini_2025-08-12_c.md  gemini_2025-08-12_c.tex  gemini_2025-08-12_d.md  gemini_2025-08-12_d.tex  gemini_2025-08-12_e.md  gemini_2025-08-12_f.md  gemini_2025-08-12_f.py  gemini_2025-08-12_f_results.txt  gemini_2025-08-12_g.md  gemini_2025-08-12_g.py  gemini_2025-08-12_g_results.txt  gemini_2025-08-12_h.md  gemini_2025-08-12_h.py  gemini_2025-08-12_h_results.txt  (+52 more)
v10/: NEXT.md  (+1 more)
v2/field_knot/: Cargo.toml  README.md  THEORY.md  coupling_analysis.py  explore_math.py  field_dynamics.py  investigation_map.py  investigation_map2_bosons.py  sim1_density_dynamics.py  sim2_boson_transfer.py  sim3_emergent_knots.py
v2/field_knot/src/: main.rs  shader.wgsl  shader_field.wgsl
(+2038 files in other folders)
