[package]
name = "field_knot"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "0.19"
winit = "0.29"
nalgebra = "0.32"
bytemuck = { version = "1.14", features = ["derive"] }
pollster = "0.3"
env_logger = "0.11"
log = "0.4"
egui = "0.27"
egui-wgpu = "0.27"
egui-winit = "0.27"
instant = "0.1"
fastrand = "2.0"

[profile.release]
opt-level = 3
lto = true
